--- a/public/html/login.html
+++ b/public/html/login.html
@@ -23,10 +23,10 @@
   <body>
     <div id="container">
       <div id="logo-wrapper">
-        <img id="logo" src="/assets/logo2.png" alt="EcoAction" />
+        <a href="/"><img id="logo" src="/assets/logo2.png" alt="EcoAction" /></a>
       </div>
       <div id="form-container">
-        <h1 id="form-title">Login / Signup</h1>
+        <h1 id="form-title">Sign in</h1>
         <div id="firebase-ui-auth-container"></div>
         <div id="align-demo">
           <div id="demo-wrapper">
