--- a/public/html/app-shell/footer-nav.html
+++ b/public/html/app-shell/footer-nav.html
@@ -18,8 +18,8 @@
     </a>
   </li>
   <li>
-    <a href="/html/groups.html"
-      ><svg
+    <a href="/html/groups.html">
+      <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
@@ -33,8 +33,9 @@
         <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" />
         <circle cx="9" cy="7" r="4" />
         <path d="M22 21v-2a4 4 0 0 0-3-3.87" />
-        <path d="M16 3.13a4 4 0 0 1 0 7.75" /></svg
-    ></a>
+        <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+      </svg>
+    </a>
   </li>
   <li>
     <a href="/html/search.html"
