--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -1,6 +1,6 @@
 <nav id="nav" class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/html/ecoactions.html">
+    <a class="navbar-brand" href="/">
       <img id="logo" src="/assets/logo2.png" height="60" />
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
