--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -1,67 +1,60 @@
-<nav id="nav" class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">
+<nav id="nav">
+  <div id="links">
+    <a href="/">
       <img id="logo" src="/assets/logo2.png" height="60" />
     </a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav m-auto mb-2 mb-lg-0 gap-2">
-        <li class="nav-item">
-          <a class="nav-link" href="/html/ecoactions.html">EcoActions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/html/groups.html">EcoGroups</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Explore</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/html/stats.html">Stats</a>
-        </li>
+    <ul id="nav-list">
+      <li>
+        <a class="nav-link" href="/html/ecoactions.html">EcoActions</a>
+      </li>
+      <li>
+        <a class="nav-link" href="/html/groups.html">EcoGroups</a>
+      </li>
+      <li>
+        <a class="nav-link" href="">Explore</a>
+      </li>
+      <li>
+        <a class="nav-link" href="/html/stats.html">Stats</a>
+      </li>
+    </ul>
+  </div>
+
+  <div id="profile" class="d-none d-lg-block ms-3">
+    <div class="dropdown">
+      <button
+        class="btn btn-outline-light p-0 border-0"
+        type="button"
+        id="profileDropdown"
+        data-bs-toggle="dropdown"
+        aria-expanded="false">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="profile-icon lucide lucide-circle-user-round-icon lucide-circle-user-round">
+          <path d="M18 20a6 6 0 0 0-12 0" />
+          <circle cx="12" cy="10" r="4" />
+          <circle cx="12" cy="12" r="10" />
+        </svg>
+        <img
+          src="/assets/images/profile-icon.png"
+          alt="Profile"
+          class="profile-image rounded-circle navBarProfileImage"
+          width="40"
+          height="40" />
+      </button>
+      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+        <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
+        <!-- <li><a class="dropdown-item" href="/html/settings_disabled.html">Settings</a></li> -->
+        <li><hr class="dropdown-divider" /></li>
+        <li><button id="lol" type="button" class="dropdown-item signOut">Sign Out</button></li>
       </ul>
-
-      <div class="d-flex ms-2 align-items-center">
-        <img id="ecoPointsImage" src="/assets/images/coin.png" alt="Eco Points Image" />
-        <p class="navBarEcoPoints m-auto">EcoPoints</p>
-      </div>
-
-      <div id="profile" class="d-none d-lg-block ms-3">
-        <div class="dropdown">
-          <button
-            class="btn btn-outline-light p-0 border-0"
-            type="button"
-            id="profileDropdown"
-            data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="profile-icon lucide lucide-circle-user-round-icon lucide-circle-user-round">
-              <path d="M18 20a6 6 0 0 0-12 0" />
-              <circle cx="12" cy="10" r="4" />
-              <circle cx="12" cy="12" r="10" />
-            </svg>
-            <img
-              src="/assets/images/profile-icon.png"
-              alt="Profile"
-              class="profile-image rounded-circle navBarProfileImage"
-              width="40"
-              height="40" />
-          </button>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
-            <!-- <li><a class="dropdown-item" href="/html/settings_disabled.html">Settings</a></li> -->
-            <li><hr class="dropdown-divider" /></li>
-            <li><button id="lol" type="button" class="dropdown-item signOut">Sign Out</button></li>
-          </ul>
-        </div>
-      </div>
     </div>
   </div>
 </nav>
