--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -14,6 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <link rel="stylesheet" href="/css/groups.css" />
+    <link rel="stylesheet" href="/css/loader.css" />
   </head>
   <body>
     <template id="groupCardTemplate">
@@ -30,31 +31,70 @@
 
     <header id="nav-bar"></header>
 
-    <div id="h1-container" class="d-flex align-items-left">
-      <h1>EcoGroups</h1>
-      <a id="create-new" class="green-button" href="group-creation.html">Create New</a>
+    <div id="loader">
+      <div class="tree">
+        <div class="branch" style="--x: 0">
+          <span style="--i: 0"></span>
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+        </div>
+        <div class="branch" style="--x: 1">
+          <span style="--i: 0"></span>
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+        </div>
+        <div class="branch" style="--x: 2">
+          <span style="--i: 0"></span>
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+        </div>
+        <div class="branch" style="--x: 3">
+          <span style="--i: 0"></span>
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+        </div>
+        <div class="stem">
+          <span style="--i: 0"></span>
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+        </div>
+        <span class="shadow"></span>
+      </div>
+      <h1>Loading...</h1>
     </div>
 
-    <form
-      id="search-box"
-      class="justify-content-center"
-      style="margin-left: auto; margin-right: auto">
-      <div class="row">
-        <div class="col">
-          <input type="text" id="search-bar" class="form-control" placeholder="Search" />
-        </div>
-        <div class="col">
-          <button type="button" id="search-button" class="btn btn-primary mb-2">Search</button>
-        </div>
+    <main class="hidden">
+      <div id="h1-container" class="d-flex align-items-left">
+        <h1>EcoGroups</h1>
+        <a id="create-new" class="green-button" href="group-creation.html">Create New</a>
       </div>
-    </form>
 
-    <div class="container mb-3">
-      <!-- Here is the container for cards  -->
-      <div class="container">
-        <div id="groups-go-here" class="justify-content-center row row-cols-auto"></div>
+      <form
+        id="search-box"
+        class="justify-content-center"
+        style="margin-left: auto; margin-right: auto">
+        <div class="row">
+          <div class="col">
+            <input type="text" id="search-bar" class="form-control" placeholder="Search" />
+          </div>
+          <div class="col">
+            <button type="button" id="search-button" class="btn btn-primary mb-2">Search</button>
+          </div>
+        </div>
+      </form>
+
+      <div class="container mb-3">
+        <!-- Here is the container for cards  -->
+        <div class="container">
+          <div id="groups-go-here" class="justify-content-center row row-cols-auto"></div>
+        </div>
       </div>
-    </div>
+    </main>
 
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
