--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -76,7 +76,7 @@
       <h1>Loading...</h1>
     </div>
 
-    <main>
+    <main class="hidden">
       <h1>My Stats</h1>
 
       <h2>
@@ -191,9 +191,6 @@
           </div> -->
         </div>
         <div id="container">
-          <div id="ecoactions-breakdown-wrapper" class="widget">
-            <canvas id="ecoactions-breakdown"></canvas>
-          </div>
           <div id="weekly-ecopoints-over-time-wrapper" class="widget">
             <canvas id="weekly-ecopoints-over-time"></canvas>
           </div>
