update navigation link and replace images in index.html

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -36,7 +36,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
+            <img src="/assets/images/park-clean-up.jpg" class="card-img-top" alt="Community Cleanup" />
             <div class="card-body">
               <h5 class="card-title">Community Cleanup</h5>
               <p class="card-text">
@@ -52,7 +52,7 @@
 
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/images/hike2.jpg" class="card-img-top" alt="Tree Planting" />
+            <img src="/assets/images/blog_x-impressive-tree-planting-organizations-exceeding-expectations.jpg" class="card-img-top" alt="Tree Planting" />
             <div class="card-body">
               <h5 class="card-title">Tree Planting</h5>
               <p class="card-text">
@@ -68,7 +68,7 @@
 
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/images/hike3.jpg" class="card-img-top" alt="Recycling Drive" />
+            <img src="/assets/images/2A563CF5-ADAF-4B46-A452-CC8520972AD7-1180x885.jpg" class="card-img-top" alt="Recycling Drive" />
             <div class="card-body">
               <h5 class="card-title">Recycling Drive</h5>
               <p class="card-text">
