--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -1,6 +1,6 @@
 <nav id="nav">
   <div id="links">
-    <a href="/">
+    <a href="/html/ecoactions.html">
       <img id="logo" src="/assets/logo2.png" height="60" />
     </a>
     <ul id="nav-list">
