Rolled back all tweaks and fixes because my fixes broke stuff

--- a/public/html/group.html
+++ b/public/html/group.html
@@ -28,6 +28,9 @@
             </div>
 
             <!-- Right side: Finish Button -->
+            <button class="btn gbtn btn-primary btn-sm finishEcoactionButton">
+              Mark as complete
+            </button>
           </div>
         </div>
 
