--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -74,19 +74,19 @@
         <a id="create-new" class="green-button" href="group-creation.html">Create New</a>
       </div>
 
-    <form
-      id="search-box"
-      class="justify-content-center"
-      style="margin-left: auto; margin-right: auto">
-      <div class="row">
-        <div class="col">
-          <input type="text" id="search-bar" class="form-control" placeholder="Search" onkeypress="return event.keyCode != 13"/>
+      <form
+        id="search-box"
+        class="justify-content-center"
+        style="margin-left: auto; margin-right: auto">
+        <div class="row">
+          <div class="col">
+            <input type="text" id="search-bar" class="form-control" placeholder="Search" />
+          </div>
+          <div class="col">
+            <button type="button" id="search-button" class="btn btn-primary mb-2">Search</button>
+          </div>
         </div>
-        <div class="col">
-          <button type="button" id="search-button" class="btn btn-primary mb-2">Search</button>
-        </div>
-      </div>
-    </form>
+      </form>
 
       <div class="container mb-3">
         <!-- Here is the container for cards  -->
