--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -11,6 +11,9 @@
         <a class="nav-link" href="/html/groups.html">EcoGroups</a>
       </li>
       <li>
+        <a class="nav-link" href="">Explore</a>
+      </li>
+      <li>
         <a class="nav-link" href="/html/stats.html">Stats</a>
       </li>
     </ul>
