Fixes And Tweaks that don't break stuff

--- a/public/html/app-shell/footer-nav.html
+++ b/public/html/app-shell/footer-nav.html
@@ -38,23 +38,6 @@
     </a>
   </li>
   <li>
-    <a href="/html/search.html"
-      ><svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        class="lucide lucide-search-icon lucide-search">
-        <circle cx="11" cy="11" r="8" />
-        <path d="m21 21-4.3-4.3" /></svg
-    ></a>
-  </li>
-  <li>
     <a href="/html/stats.html">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -70,6 +53,24 @@
         <path d="M3 3v16a2 2 0 0 0 2 2h16" />
         <path d="m19 9-5 5-4-4-3 3" />
       </svg>
+    </a>
+  </li>
+  <li>
+    <a href="/html/profile.html"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-search-icon">
+        <path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/>
+        <circle cx="12" cy="10" r="3"/>
+        <circle cx="12" cy="12" r="10"/></svg>
     </a>
   </li>
 </ul>
