add seed user and completed ecoactions by category chart

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -161,9 +161,8 @@
             <span class="kpi-value"></span>
             <span class="kpi-label">EcoPoints</span>
           </div>
-          <div id="lifetime-completed-ecoactions" class="widget kpi">
-            <span class="kpi-value"></span>
-            <span class="kpi-label">Completed EcoActions</span>
+          <div id="lifetime-completed-ecoactions-by-category-wrapper" class="widget">
+            <canvas id="lifetime-completed-ecoactions-by-category"></canvas>
           </div>
           <div id="lifetime-ecogroups" class="widget kpi">
             <svg
