add completedEcoActions breakdown for this week

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -101,9 +101,8 @@
       </h2>
       <div id="this-week-container" class="stats-container">
         <div class="kpis">
-          <div id="this-week-completed-ecoactions" class="widget kpi">
-            <span class="kpi-value"></span>
-            <span class="kpi-label">Completed EcoActions</span>
+          <div id="this-week-completed-ecoactions-by-category-wrapper" class="widget">
+            <canvas id="this-week-completed-ecoactions-by-category"></canvas>
           </div>
           <div id="this-week-ecopoints-breakdown-wrapper" class="widget">
             <canvas id="this-week-ecopoints-breakdown"></canvas>
@@ -158,6 +157,7 @@
       <div id="lifetime-container" class="stats-container">
         <div class="kpis">
           <div id="lifetime-ecopoints" class="widget kpi">
+            <img src="/assets/ecopoints2.png" alt="EcoPoints" />
             <span class="kpi-value"></span>
             <span class="kpi-label">EcoPoints</span>
           </div>
