update ecopoints icon, general styling

--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -70,7 +70,7 @@
               <div class="d-flex align-items-center">
                 <h5 class="mb-0 title">Challenge 1</h5>
                 <p class="ecoPoints m-0 mt-1 ms-2"></p>
-                <img src="/assets/images/coin.png" class="mr-1 coin" />
+                <img src="/assets/ecopoints1.png" class="mr-1 coin" />
               </div>
               <!-- Right side: Finish Button -->
               <button class="btn gbtn btn-primary btn-sm finishEcoactionButton">Finish</button>
