stats page responsive styling

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -190,7 +190,7 @@
           </div> -->
         </div>
         <div id="container">
-          <div id="weekly-ecopoints-over-time-wrapper" class="widget">
+          <div id="weekly-ecopoints-over-time-wrapper" class="widget chart">
             <canvas id="weekly-ecopoints-over-time"></canvas>
           </div>
         </div>
